--- a/.github/workflows/robbie_whitty_application.yml
+++ b/.github/workflows/robbie_whitty_application.yml
@@ -42,12 +42,12 @@ jobs:
         uses: actions/setup-python@v3.0.0
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-          #cache: 'pip'
+          cache: 'pip'
 
-      - name: Create and start virtual environment
-        run: |
-          python -m venv venv
-          source venv/bin/activate
+ #     - name: Create and start virtual environment
+ #       run: |
+ #         python -m venv venv
+ #         source venv/bin/activate
 
       - name: Install dependencies
         run: pip install -r requirements.txt
