--- a/.github/workflows/robbie_whitty_application.yml
+++ b/.github/workflows/robbie_whitty_application.yml
@@ -61,6 +61,9 @@ jobs:
           path: |
             .
             !venv/
+      - name: Run app
+        run: | 
+              Flask --app index.py run
 
   deploy:
     permissions:
